# Storm-AI

./: .gitignore  README.md  main.py  pyproject.toml  test.py
context/: categories.py  state.py  tracker.py
control/: actions.py  enforcer.py  focus_state.py  rules.py  task_detector.py  task_profiles.py  watchdog.py
desktop_ui/: server.py  state.py
desktop_ui/walpaper/: eyes.js  index.html  style.css
documentation/: architecture.md  modules.md  overview.md  setup.md
guidance/: engine.py  rules.py
llm/: model.py  parser_llm.py
memory/: controller.py  reminders.py  store.py
personality/: engine.py  state.py  traits.py
rag/: ingest.py  query.py
rag/db/: chroma.sqlite3
system/: command_router.py  confirm.py  security.py  validator.py
voice/: assistant_loop.py  interrupt.py  live_stt.py  live_tts.py  wake_word.py
