[project]
name = "storm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "appopener>=1.7",
    "chromadb>=1.3.7",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "keyboard>=0.13.5",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "psutil>=7.1.3",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pypdf>=6.4.2",
    "pyttsx3>=2.99",
    "sentence-transformers>=5.2.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "vosk>=0.3.45",
]
